# solana_crowdsale_scaffold

./: .pnp.cjs  Anchor.toml  README.md  package.json
programs/crowdsale/: Cargo.toml
programs/crowdsale/src/: lib.rs
