[package]
name = "dappu_solana_crowdsale_scaffold"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dappu_solana_crowdsale_scaffold"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "1.14.12"